"I gotta get out of here!"	Requires Talbin to be escorted through the pass and he doesn't spawn on Bengars farm right away.
"Merchant raid"	Requires finding the bandits who took Erol's stone tablets, before returning any stone tablets.
"Quest for Lucia"	Is now just about delivering her note to Elvrich, after that she is just another missing person.
"Rescue Gorn"	Can only be finished after scouting at least one mining site.
"The Claw of Beliar"	Requires talking to Saturas before praying to Beliar and the option to destroy it is only presented once.
"The Seekers"	Can be finished by bringing all of the Almanacs to Pyrokar before leaving for Irdorath.
"The man with the eyepatch"	Cancels if the first treasure is not given to him.
"The simple way to the monastery"	Only reduces the gold offering required.
"Unnerving Lurkers"	Cancels in chapter 4 if not finished, causing Kervo and Geppert to be killed by a lurker instead of disappearing.


		MINOR IMPROVEMENTS AND FIXES

	Random

Added new teleport scroll to get out of the ruins behind broken bridge in Jharkendar.
Black Ore effect ends on using transformation scrolls.
Bloodfly poison is referred to as venom instead.
Cannot level up when dead.
Embarla Firgasto correctly depletes NH's mana.
Experience gain is not printed out if receiving 0 xp.
Gold cannot be dropped.
Gold mining skill does not improve by mining empty veins.
Herring is categorized as food.
Increased limit for alpha vobs/polys.
Keys no longer have any value.
Leather Satchels filled with gold can be sold for their full gold value, including special satchels.
Main menu sounds are silenced after start a new game or loading one.
Many items have their description now on one line instead of multiple lines.
Nostalgia bonus properly awards levels to NH.
Quarhodron summoning scroll visual changed from piece of paper into proper scroll.
Quests from monastery for novices become obsolete after NH becomes a mage, not when they receive the key to the library.