@@ -12,7 +12,7 @@ FUNC VOID GregIsBack_S1 ()
 		Wld_InsertNpc 	(CanyonRazor07, 	"ADW_CANYON_MINE1_01");
 		Wld_InsertNpc 	(CanyonRazor08, 	"ADW_CANYON_PATH_TO_LIBRARY_07A");
 		Wld_InsertNpc 	(CanyonRazor09, 	"ADW_CANYON_PATH_TO_LIBRARY_36");
-		Wld_InsertNpc 	(CanyonRazor10, 	"ADW_CANYON_PATH_TO_MINE2_04");
+		Wld_InsertNpc 	(CanyonRazor10, 	"ADW_CANYON_PATH_TO_LIBRARY_37"); //"ADW_CANYON_PATH_TO_MINE2_04");
 	};	
 	GregIsBack = TRUE;
 }; 
